jena-shex/src/test/files/spec/validation/nPlus1.shex
BASE <http://a.example.org/>
PREFIX : <http://a.example/>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>

<S> { :a .*; (:a .+ | :a .); :a . }
