jena-shex/src/test/files/spec/negativeSyntax/groupShapeConstr-trailing-OR.shex
# groupShapeConstr trailing OR
<http://a.example/IssueShape> {
   <http://a.example/p1> @<http://a.example/IssueShape> OR
}
